Layout bug fixes, better validation hint

--- a/src/components/ProfilesApp/ProfileForm/ProfileForm.scss
+++ b/src/components/ProfilesApp/ProfileForm/ProfileForm.scss
@@ -1,3 +1,6 @@
+.wrapper {
+  width: 100%
+}
 .input {
   display: inline-block;
   margin-right: 12px;
@@ -21,7 +24,7 @@
 }
 
 .phoneInput {
-  width: 201px;
+  width: 210px;
 }
 
 .button {
