--- a/src/components/common/BirthdayInput/BirthdayInput.scss
+++ b/src/components/common/BirthdayInput/BirthdayInput.scss
@@ -4,7 +4,7 @@
 }
 
 .dayInput {
-  width: 45px;
+  width: 55px;
 }
 
 .monthInput {
